# harmony

./: .gitignore  Cargo.toml  LICENSE.md  README.md  asset_readme.md  log.txt  todo.md
.rendy-old/: README.md  cargo.toml
.rendy-old/src/: main.rs
.rendy-old/src/assets/: asset_manager.rs
.rendy-old/src/graphics/material/: shader.rs
.rendy-old/src/gui/: mod.rs
.rendy-old/src/gui/renderer/: mod.rs  quad_renderer.rs  vertex_attributes.rs  vertex_formats.rs
assets/: image.ron  material.ron
assets/core/: black.png.ron  brdf_texture.image.ron  empty_normal.image.ron  material_test.ron  mie.hdr  rayleigh.hdr  rayleigh.image.ron  white.image.ron
assets/core/materials/: empty.ron
assets/core/shaders/: line.frag.glsl  line.shader  line.vert.glsl  line_frag.glsl  line_vert.glsl  pbr.frag.glsl  pbr.shader  pbr.vert.glsl  pbr_fragment.glsl  pbr_vertex.glsl  shadow.frag.glsl  shadow.shader  shadow.vert.glsl  skybox.frag.glsl  skybox.shader  skybox.vert.glsl  skybox_frag.glsl  skybox_vert.glsl  unlit.shader  unlit.vert.glsl  unlit_fragment.glsl
assets/core/shaders/calculations/: brdf.glsl  env_irradiance2_frag.glsl  env_irradiance_frag.glsl  env_specular.frag.glsl  env_specular2.frag.glsl  env_specular2_frag.glsl  env_specular_frag.glsl  equirectangular_to_cube_faces.frag.glsl  equirectangular_to_cube_faces.vert.glsl  equirectangular_to_cube_faces_vert.glsl  full_screen_quad_vert.glsl  hdr_to_cubemap.shader  irradiance.shader  irradiance2.shader  mipmap.shader  specular.shader  specular2.shader  specular_brdf.shader  specular_brdf_frag.glsl
assets/core/shaders/clustered/: froxel.comp.glsl  froxels.shader  frustum.glsl  light_culling.comp.glsl  light_culling.shader
assets/core/shaders/gui/: gui_quad.frag
assets/example/shader/: triangle.shader
assets/example/textures/: georgentor.image.ron  georgentor_4k.hdr.ron  venice_sunrise.image.ron
assets/materials/: unlit.json
assets/shaders/: unlit.shader  unlit_fragment.glsl  unlit_vertex.glsl
assets/shaders/gui/: gui_quad.frag  gui_quad.shader
examples/: benchmark.rs  gui.rs  hello-cube.rs  hello-pipeline.rs  hello-world.rs  shadow.rs  texture-test.rs
examples/helpers/: mod.rs  triangle_pipeline.rs
old/: Cargo.toml
old/src/: main.rs  main_old_gui.rs
old/src/assets/: asset_manager.rs  mod.rs
old/src/gui/: mod.rs  quad_renderer.rs  renderer.rs
old/src/gui_old/: console.rs
src/: application.rs  lib.rs  main.rs  main_hal.rs  winit_state.rs
src/assets/: asset_manager.rs  file_manager.rs  image.rs  image_asset_manager.rs  material.rs  material_manager.rs  mesh.rs  mesh_manager.rs  mod.rs  new_asset_manager.rs  shader.rs  shader_manager.rs  texture.rs  texture_manager.rs
src/core/: bounding_sphere.rs  frustum.rs  input.rs  mod.rs  performance_metrics.rs  plane.rs  theme.rs
src/graphics/: drawable.rs  mesh.rs  mod.rs  pipeline.rs  pipeline_manager.rs  render_graph.rs  render_target.rs  renderer.rs
src/graphics/lighting/: cluster.rs  cull.rs  frustum_creation.rs  light_cull.rs  mod.rs
src/graphics/material/: hdr.rs  image.rs  material.rs  materials.rs  mod.rs  new_material.rs  pbr_material.rs  shader.rs  skybox.rs  unlit_material.rs
src/graphics/pipelines/: brdf.rs  equirectangular.rs  equirectangular2.rs  irradiance.rs  irradiance2.rs  line.rs  mipmap.rs  mod.rs  pbr.rs  realtime_sky.rs  skybox.rs  specular.rs  specular2.rs  specular_brdf.rs  unlit.rs
src/graphics/resources/: arc_render_pass.rs  bind_group.rs  binding_manager.rs  bound_resource.rs  gpu_image_manager.rs  gpu_resource_manager.rs  image_manager.rs  material_manager.rs  mod.rs  probe.rs  probe_manager.rs  render_target.rs  resource_manager.rs
src/graphics/shadows/: mod.rs  omni_manager.rs
src/graphics/systems/: froxel.rs  globals.rs  line.rs  mesh.rs  mod.rs  render.rs  shadow.rs  skybox.rs
src/graphics_hal/: mod.rs  renderer.rs
src/gui/: mod.rs  quad_renderer.rs  renderer.rs  scene.rs  text_renderer.rs
src/gui/animation/: easings.rs  mod.rs
src/gui/components/: animation.rs  button.rs  component.rs  flex.rs  log.rs  mod.rs  padding.rs  text.rs  window.rs
src/gui/core/: background.rs  color.rs  font.rs  mod.rs  rectangle.rs  viewport.rs
src/gui/renderables/: mod.rs  quad.rs
src/gui_old/: gui.rs  mod.rs  scene.rs  theme_scene.rs
src/gui_old/messages/: mod.rs  theme_message.rs
src/gui_old/theme/: light.rs  mod.rs
src/scene/: mod.rs  scene.rs
src/scene/components/: camera_data.rs  light_data.rs  material.rs  mesh.rs  mod.rs  probe.rs  skybox.rs  transform.rs
src/scene/entities/: camera.rs  light.rs  mod.rs  probe.rs
src/scene/resources/: mod.rs
src/scene/systems/: culling.rs  mod.rs  prepare_pbr.rs  prepare_unlit.rs  render_mesh.rs  render_pbr.rs  render_skybox.rs  render_unlit.rs
(+17 files in other folders)
