[package]
name = "harmony"
version = "0.1.0"
authors = ["John Mitchell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
async-std = "1.5.0"
arrayvec = "0.5.1"
assetmanage-rs = { git = "https://github.com/floatingmountain/assetmanage-rs/", rev = "a48ddbd1c90f2250f8a30801bd8c3ca69288bbe3"}
bytemuck = { version = "1.2.0", features = ["extern_crate_alloc"] }
crossbeam = "0.7.3"
env_logger = "0.7.1"
futures = "0.3"
gltf="0.15.2"
glyph_brush = "0.6"
image = "0.23.4"
imgui = { version = "0.4.0-pre", git = "https://github.com/jaynus/imgui-rs", rev = "fd3caf3e5b1141e8af3725f8c6898524c14426b0" }
imgui-wgpu = { git="https://github.com/StarArawn/imgui-wgpu-rs", rev="8b6349b6d7b8ade0ec8c7c70b9cd83a9db691979" }
imgui-winit-support = { version = "0.4.0-pre", git = "https://github.com/jaynus/imgui-rs", rev = "fd3caf3e5b1141e8af3725f8c6898524c14426b0", default-features = true }
legion = { git = "https://github.com/TomGillen/legion", rev="bd441f4811e7a9e877a0f479a674bbdbf4e4cda3" }
log = "0.4"
mikktspace = "0.2.0"
nalgebra = "0.21.0"
nalgebra-glm = "0.7"
ordered-float = "1.0"
png = "0.16.3"
ron = "0.5"
serde = { version = "1.0", features = ["derive"] }
shaderc = "0.6"
solvent = "0.8.1"
stretch = "0.3.2"
walkdir = "2"
wasm-bindgen = "0.2.62"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev="d12d1422a75e08fc2aee3691292a960bd47416e4" }
winit = { version = "0.22.0", features = ["web-sys"] }
zerocopy = "0.3"
